@@ -1,4 +1,4 @@
-SUBDIRS = clock launcher systray showdesktop windowselector
+SUBDIRS = brightness clock launcher systray showdesktop windowselector
 
 if HAVE_LIBAPM
   SUBDIRS += battery
