@@ -1,0 +1,6 @@
+imagedir = $(pkgdatadir)/brightness
+image_DATA = brightness-min.png         \
+	     brightness-medium.png      \
+	     brightness-max.png
+
+MAINTAINERCLEANFILES = Makefile.in
