@@ -1,8 +1,14 @@
+2008-02-04  Ross Burton  <ross@openedhand.com>
+
+	* configure.ac:
+	* applets/Makefile.am:
+	* applets/brightness/*:
+	Add a brightness applet, thanks Manuel Teira.
+
 2008-02-01  Thomas Wood  <thomas@openedhand.com>
 
 	* applets/windowselector/mb-applet-windowselector.png:
 	Updated icon
-
 
 2008-01-17  Ross Burton  <ross@openedhand.com>
 
